# python-docker-mcp

./: .coverage  .coverage.192-168-1-100.tpgi.com.au.1567.XuQJoUIx.c  .coverage.192-168-1-100.tpgi.com.au.1568.XChuZthx  .coverage.192-168-1-100.tpgi.com.au.1568.XjGVSQWx  .flake8  .mcp.bak  .mcp.json  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.py  test_direct_docker.py  test_docker.py  test_manual.py  test_mcp_inspector.py  test_pool_recycling.py  test_pooling.py  test_server.py  test_simple.py
docs/: client.md
examples/: client_example.py
src/python_docker_mcp/: Dockerfile  __init__.py  __main__.py  build_docker_image.py  client.py  config.py  default_config.yaml  docker_manager.py  server.py
tests/: .coverage  __init__.py  conftest.py
tests/integration/: test_client_integration.py  test_mcp_client.py
tests/unit/: test_build_docker_image.py  test_build_docker_image_unit.py  test_client.py  test_client_unit.py  test_config.py  test_docker_manager.py  test_docker_manager.py.bak  test_init.py  test_main.py  test_server.py  test_server_unit.py
